# HdRezkaApi

./: HDrezkaAPI.py  HdRezkaApi.py  README.md  app.jsx  hdrezka.py  hdrezka2.py  hdrezka3.py  index.html  pyproject.toml  styles.css
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: pypi_publish.yml
HdRezkaApi/: HdRezkaApi.py  __init__.py  api.py  errors.py  search.py  session.py  stream.py  types.py
HdRezkaApi/utils/: errors.py  search.py  stream.py  types.py
components/: Content.jsx  Sidebar.jsx  Status.jsx  Text.jsx
data/: film.json  hdrezka_api.json  index.json  menu.json  search.json  session.json  stream.json  types.json
github/: pypi.build
